# AIOS

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: PLAN.md
docs/: coverage.md  integration.md  profiles.md
docs/spec/: AIOS_Constitution.md  AIOS_Distribution_Spec.md  AIOS_EventLog.cfg  AIOS_EventLog.tla  AIOS_Kernel_Spec.md  AIOS_Runtime_Protocol.md  AIOS_Verification_Spec.md  v8-README.md
examples/: demo.md
examples/demo-project/: README.md
examples/demo-project/adrs/: 0001-pii-logging-policy.md  0002-append-only-log.md
examples/reference/: README.md  conservation_scan.py  event_log.py  test_conservation_scan.py  test_event_log.py
src/aios/: __init__.py  cli.py
src/aios/distribution/: __init__.py  bootstrap.py  install.py  integrity.py  release.py  rollback.py  sbom_cyclonedx.py  sbom_spdx.py  tuf.py  tuf_chain.py  tuf_rotation.py  upgrade.py
src/aios/enterprise/: __init__.py  jcs.py  macaroons.py  (+1 more)
tests/: test_acceptance_sandbox.py  test_acceptance_tests.py  test_adversarial.py  test_adversarial_v02.py  test_audit.py  test_backtest.py  test_bootstrap.py  test_calibration_methods.py  test_calibration_metrics.py  test_calibration_record.py  test_calibration_status.py  test_cli.py  test_cli_adopt.py  test_cli_check.py  test_cli_run.py  test_compaction.py  test_conservation_scan.py  test_corpus_quality.py  test_credentials.py  test_demo_project.py  test_dpop.py  test_ed25519.py  test_enterprise_stubs.py  test_event_log.py  test_event_log_lock.py  test_event_log_signing.py  test_filelock.py  test_incident_replay.py  test_init.py  test_install.py  test_integrity.py  test_killswitch.py  test_macaroons.py  test_merkle.py  test_merkle_proofs.py  test_phase0.py  test_phase1.py  test_phase1_update.py  test_pi_sentinel.py  test_profile.py  (+26 more)
(+38 files in other folders)
