[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aios"
version = "0.2.0"
description = "AIOS v8 reference implementation: event log, conservation scan, gate registry, workflow runner, CLI. P-Local fully supported; P-Enterprise partial."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Prithvi Putta", email = "Prithvip40@gmail.com" }
]
keywords = ["aios", "event-log", "conservation", "governance", "cbor", "append-only"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    # Used by the Verification §1.2 core predicate P_schema_valid
    # (T3 schema check). Draft 2020-12 support + good error paths.
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
enterprise = [
    # Ed25519 signing (Runtime §1.2 sig, §2 capability tokens, §9.1 core crypto
    # for P-Enterprise and above). cryptography is the standard Python binding
    # to OpenSSL; well-audited and widely deployed.
    "cryptography>=42.0",
    "PyYAML>=6.0",
]

[project.scripts]
aios = "aios.cli:main"

[project.urls]
"Source" = "https://github.com/cyberbloke9/AIOS"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
